# website

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
.github/workflows/: docker-publish.yml  docker.yml
apps/blog/: admin.py  models.py  serializers.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_auto_20230713_2359.py  0003_post_is_active.py
apps/blog/templates/: post_detail.html
apps/common/: admin.py  models.py  renderers.py  serializers.py  urls.py  views.py
apps/common/migrations/: 0001_create_super.py  0001_initial.py  0002_userprofile.py  0003_auto_20230610_0046.py  0004_alter_userprofile_avatar.py  0004_userprofile_is_active.py
apps/common/templates/: 404.html
apps/common/templates/account/: login.html
apps/common/templates/accounts/: profile.html
apps/common/templates/flatpages/: default.html
docs/: task.md
scripts/: entrypoint.sh
storage/: .gitignore
templates/account/: base.html  login.html
templates/accounts/: sign-in.html
templates/includes/: footer.html  head.html  nav.html  navigation.html  scripts.html  sidebar.html
templates/layouts/: base.html  web.html
templates/pages/: index.html
website/: celery.py  settings.py  urls.py
website/website/: settings.py  urls.py
