[tool.poetry]
name = "website"
version = "0.1.0"
description = "website"
authors = ["yaochenfeng <282696845@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=3.0,<4.0"
django-environ = "^0.10.0"
gunicorn = "^20.1.0"
pillow = "^10.0.0"
django-admin-volt = "^1.0.10"
djangorestframework = "^3.14.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.5.0"
django-redis = "^5.3.0"
celery = "^5.3.1"
django-allauth = "^0.54.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
