[tool.poetry]
name = "website"
version = "0.1.0"
description = "website"
authors = ["yaochenfeng <282696845@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = ">=3.2,<4.0"
django-environ = "^0.10.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"
django-admin-volt = "^1.0.10"
djangorestframework = "^3.14.0"
django-redis = "^5.3.0"
pillow = "^10.0.0"
celery = {extras = ["redis"], version = "^5.3.1"}
psycopg2-binary = "^2.9.6"
django-tinymce = "^3.6.1"
django-allauth = "^0.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
